fixed logo on mobile

--- a/src/HealthcareCategories.css
+++ b/src/HealthcareCategories.css
@@ -1,9 +1,3 @@
-#welcomeIMG {
-    margin-left: 0%;
-    max-width: 100%;
-    height: auto;
-}
-
 #topOfPage {
     display: flex;
     flex-direction: row;
@@ -34,6 +28,8 @@
     flex-direction: row;
     justify-content: center;
     align-items: flex-start;
+    height: auto;
+    width: auto;
 }
 
 @media only screen and (min-width: 1001px) {
@@ -41,6 +37,12 @@
         height: 65%;
         width: 65%;
         text-align: center;
+    }
+
+    #welcomeIMG {
+        margin-left: 0%;
+        max-width: 150px;
+        max-height: 150px;
     }
 
     #notSure {
@@ -81,6 +83,12 @@
         text-align: center;
     }
 
+    #welcomeIMG {
+        margin-left: 0%;
+        max-width: 100px;
+        max-height: 100px;
+    }
+
     #notSure {
         height: 25%;
         width: 25%;
@@ -117,6 +125,12 @@
         height: 50%;
         width: 50%;
         text-align: center;
+    }
+
+    #welcomeIMG {
+        margin-left: 0%;
+        max-width: 90px;
+        max-height: 900px;
     }
 
     #notSure {
@@ -157,6 +171,12 @@
         text-align: center;
     }
 
+    #welcomeIMG {
+        margin-left: 0%;
+        max-width: 75px;
+        max-height: 75px;
+    }
+
     #notSure {
         height: 40%;
         width: 40%;
@@ -195,6 +215,12 @@
         text-align: center;
     }
 
+    #welcomeIMG {
+        margin-left: 0%;
+        max-width: 60px;
+        max-height: 60px;
+    }
+
     #notSure {
         height: 30%;
         width: 30%;
@@ -226,6 +252,12 @@
         height: 20%;
         width: 20%;
         text-align: center;
+    }
+
+    #welcomeIMG {
+        margin-left: 0%;
+        max-width: 50px;
+        max-height: 50px;
     }
 
     .figImg {
